# fre-gy-7773-mlfe

./: .gitignore  01_linalg.ipynb  01_probability_statistics.ipynb  01_productivity.md  02_mle_solution.ipynb  06_optimization_linreg.ipynb  08_pca_k_means_returns.ipynb  README.md  pyproject.toml
